2010-02-12 Francesco Fumanti <francesco.fumanti@gmx.net>

    DistUtilsExtra.auto >= 2.10 puts *.ui files to standard location

2010-02-12 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add main category to desktop files

2010-02-06 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix capitalisation of the word GNOME (LP: #495526)

2010-02-06 Francesco Fumanti <francesco.fumanti@gmx.net>

    Make merging of ui file into .pot file automatic (LP: #452897)

2010-02-06 Francesco Fumanti <francesco.fumanti@gmx.net>

    Delete unnecessary setup.cfg for python-distutils-extra >= 2.12

2010-01-10 Francesco Fumanti <francesco.fumanti@gmx.net>

    Make .desktop files translatable

2009-11-25 Francesco Fumanti <francesco.fumanti@gmx.net>

    Minimize to IconPalette if running under GDM

2009-11-19 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix taskbar icon visibility - closes LP #456178

2009-11-19 Francesco Fumanti <francesco.fumanti@gmx.net>

    Clean up status icon naming

2009-10-27 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix long description in schemas file

2009-10-27 Francesco Fumanti <francesco.fumanti@gmx.net>

    Adjust permissions and fix typo (LP: #461491)

2009-10-06 Francesco Fumanti <francesco.fumanti@gmx.net>

    Do not launch settings dialog under GDM (LP: #440371)

2009-10-01 Francesco Fumanti <francesco.fumanti@gmx.net>

    Increase version number to 0.93.0 in README file

2009-09-12 Francesco Fumanti <francesco.fumanti@gmx.net>

    Correctly compare version numbers (f.ex.: 2.10 > 2.3)

2009-09-11 Francesco Fumanti <francesco.fumanti@gmx.net>

    Enhance onboard --help output for debugging

2009-09-03 Francesco Fumanti <francesco.fumanti@gmx.net>

    Sync with revision 165 of lp:onboard

2009-08-16 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add to HACKING the command to merge code changes into .po files

2009-08-16 Francesco Fumanti <francesco.fumanti@gmx.net>

    Qualify import statements
